# nlab-listary

./: .gitignore  Cargo.toml  README.md
nlab-listary/: Cargo.toml  Dioxus.toml
nlab-listary/.cargo/: config.toml
nlab-listary/assets/: styles.css
nlab-listary/src/: app.rs
nlab-listary/src-tauri/: .gitignore  .taurignore  Cargo.toml  README.md  main.rs  tauri.conf.json  tauri.conf.json.backup
nlab-listary/src-tauri/src/: browser.rs  git_ops.rs  lib.rs  main.rs  models.rs  parser.rs  search.rs  storage.rs
src/: browser.rs  git_ops.rs  lib.rs  main.rs  models.rs  parser.rs  search.rs  storage.rs
template/: Cargo.toml  Dioxus.toml
template/src-tauri/: Cargo.toml  tauri.conf.json
