[package]
name = "nlab-listary-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
git2 = "0.20.2"
open = "5.3.2"
# reqwest = { version = "0.12.23", features = ["blocking", "json"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
sled = "0.34.7"
tantivy = "0.25.0"
thiserror = "2.0.17"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
# tokio = { version = "1.47.1", features = ["full"] }