[package]
name = "nlab-listary-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
dioxus-logger = "0.6"
serde = { version = "1", features = ["derive"] }

[workspace]
members = ["src-tauri"]
resolver = "2"

# Dependency overrides to resolve kuchikiki conflict
[workspace.dependencies]
kuchikiki = "0.8.8-speedreader"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
