[package]
name = "nlab-listary-demo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nlab_listary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
git2 = "0.20.2"
open = "5.3.2"
rayon = "1.11.0"
# reqwest = { version = "0.12.23", features = ["blocking", "json"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
sled = "0.34.7"
tantivy = "0.25.0"
thiserror = "2.0.17"
walkdir = "2.5.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde_json = "1"

[dev-dependencies]
tempfile = "3.23.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
# tokio = { version = "1.47.1", features = ["full"] }